--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <body>
  
 		    
-		<div class="lapp shadow-large">
-                    <div class="lapp-image">
-                        <img src="images/lapp.jpg" 
+		<div class="proyect04L">
+                    <div class="proyect04L-image">
+                        <img src="images/proyect04L.jpg" 
 			     width="900"  />
                     </div>
                     <!-- End .project-image -->
-                    <div class="lapp-info">
+                    <div class="proyect04L-info">
                         <h3>Segunda ilustración</h3>
                         <p>
                              Esta es la segunda ilustración del trabajo práctico de la asignatura de expresión artística.
