--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <div class="proyect04L-info">
                         <h3>Segunda ilustración</h3>
                         <p>
-                             Esta es la segunda ilustración del trabajo práctico de la asignatura de expresión artística.
+                             Por muchos otros feedeos y roturas de encufes. BOBOOOOOOO!!!!
                         </p>
 			
                     </div>
